# sticky_notes_cli

./: .gitignore  CMakeLists.txt  example.txt
src/: main.cpp
src/commands/: add_sticky.cpp  delete_sticky.cpp  display_help.cpp  edit_sticky.cpp  get_sticky.cpp  list_stickies.cpp  ls_highlighted.cpp
src/headers/: callbacks.h  commands.h  constants.h  globals.h  signals.h  utils.h  watcher.h
src/helpers/: callbacks.cpp  constants.cpp  globals.cpp  utils.cpp
src/monitoring/: signals.cpp  watcher.cpp
